<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/anasayfaYemekGirBtn"
                android:layout_width="37dp"
                android:layout_height="39dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/back" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="35dp"
                app:srcCompat="@drawable/food" />

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/yemekTarihTxt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/yemek_date"
                    android:inputType="textPersonName"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="?android:attr/textColorTertiaryInverse"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/yemek1txt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/yemek1"
                    android:inputType="textPersonName"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="?android:attr/textColorTertiaryInverse"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/yemek2txt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/yemek2"
                    android:inputType="text"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="?android:attr/textColorTertiaryInverse"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/yemek3txt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/yemek3"
                    android:inputType="text"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="?android:attr/textColorTertiaryInverse"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/yemek4txt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/yemek4"
                    android:inputType="text"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="?android:attr/textColorTertiaryInverse"
                    android:textSize="17dp" />

                <Button
                    android:id="@+id/menuGirBtn"
                    android:layout_width="300dp"
                    android:layout_height="46dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom4"
                    android:ems="19"
                    android:text="@string/button_yemek"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="?android:attr/textColorTertiaryInverse" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="353dp"
                android:layout_height="113dp"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/sibernetik_logo" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>