<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper1">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/anasayfaYeniSifreBtn"
            android:layout_width="37dp"
            android:layout_height="39dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/lock" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="135dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eskiSifreTxt"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom1"
                android:ems="13"
                android:hint="@string/eski_sifre"
                android:inputType="textPassword"
                android:textColor="?android:attr/textColorTertiaryInverse"
                android:textColorHint="?android:attr/textColorTertiaryInverse"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/yeniSifreTxt"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom1"
                android:ems="13"
                android:hint="@string/sifre_reset"
                android:inputType="textPassword"
                android:textColor="?android:attr/textColorTertiaryInverse"
                android:textColorHint="?android:attr/textColorTertiaryInverse"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/yeniSifreTekrarTxt"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom1"
                android:ems="13"
                android:hint="@string/sifre_tekrar_reset"
                android:inputType="textPassword"
                android:textColor="?android:attr/textColorTertiaryInverse"
                android:textColorHint="?android:attr/textColorTertiaryInverse"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnSifreDegistir"
                android:layout_width="309dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom4"
                android:ems="19"
                android:text="@string/button_resetpwd"
                android:textColor="?android:attr/textColorTertiaryInverse"
                android:textColorHint="?android:attr/textColorTertiaryInverse" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="353dp"
            android:layout_height="113dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/sibernetik_logo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>