<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/anasayfaOnaylaBtn"
                android:layout_width="37dp"
                android:layout_height="39dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/back" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="35dp"
                app:srcCompat="@drawable/loginprofile" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/adSoyadOnayTxt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/adsoyad_register"
                    android:inputType="textPersonName"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="@color/black"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/ePostaOnayTxt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/email_login"
                    android:inputType="textPersonName"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="@color/black"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/telNoOnayTxt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/tel_register"
                    android:inputType="text"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="@color/black"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/tcknOnayTxt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/dep_register"
                    android:inputType="textEmailAddress"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="@color/black"
                    android:textSize="17dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/tarihOnayTxt"
                        android:layout_width="251dp"
                        android:layout_height="38dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="left"
                        android:layout_marginTop="7dp"
                        android:layout_marginRight="7dp"
                        android:background="@drawable/custom2"
                        android:clickable="false"
                        android:editable="false"
                        android:ems="15"
                        android:hint="İşe Başlangıç Tarihi"
                        android:textColor="?android:attr/textColorTertiaryInverse"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/iseTarihOnayBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:background="@drawable/custom4"
                        android:ems="12"
                        android:text="Seç"
                        android:textColor="?android:attr/textColorTertiaryInverse"
                        android:textColorHint="?android:attr/textColorTertiaryInverse"
                        android:textSize="10sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:entries="@array/hesap_gorev" />

                <EditText
                    android:id="@+id/bolumOnayTxt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/bolum_onayla"
                    android:inputType="text"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="@color/black"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/gorevBolumOnayTxt"
                    android:layout_width="300dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/custom2"
                    android:ems="15"
                    android:hint="@string/bolum_gorev_onayla"
                    android:inputType="text"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="@color/black"
                    android:textSize="17dp" />

                <Spinner
                    android:id="@+id/spinnerYonetici"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="YONETICI"
                    android:entries="@array/hesap_gorev"/>

                <Spinner
                    android:id="@+id/spinnerArac"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="YONETICI"
                    android:entries="@array/arac_kullanim"/>

                <Button
                    android:id="@+id/btnOnay"
                    android:layout_width="300dp"
                    android:layout_height="46dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom4"
                    android:ems="19"
                    android:text="@string/button_onayla"
                    android:textColor="?android:attr/textColorTertiaryInverse"
                    android:textColorHint="?android:attr/textColorTertiaryInverse" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>