<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper1">

    <ImageButton
        android:id="@+id/anasayfaForgotBtn"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_marginEnd="330dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5"
        app:srcCompat="@drawable/lock" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="353dp"
        android:layout_height="113dp"
        android:layout_gravity="center"
        android:layout_marginTop="315dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/sibernetik_logo"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="110dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailTxtForgot"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom1"
                android:ems="13"
                android:hint="@string/email_login"
                android:inputType="text"
                android:textColor="?android:attr/textColorTertiaryInverse"
                android:textColorHint="?android:attr/textColorTertiaryInverse"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnYeniPwd"
                android:layout_width="309dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom4"
                android:ems="19"
                android:text="@string/button_forgotpwd"
                android:textColor="?android:attr/textColorTertiaryInverse" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>